--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private":"true",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
